// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ld-link renders as disabled 1`] = `
<ld-link>
  <mock:shadow-root>
    <a aria-disabled="true" class="ld-link ld-link--disabled" disabled="">
      <slot></slot>
    </a>
  </mock:shadow-root>
  Link
</ld-link>
`;

exports[`ld-link renders default 1`] = `
<ld-link>
  <mock:shadow-root>
    <a class="ld-link">
      <slot></slot>
    </a>
  </mock:shadow-root>
  Link
</ld-link>
`;

exports[`ld-link renders with href 1`] = `
<ld-link href="#">
  <mock:shadow-root>
    <a class="ld-link" href="#">
      <slot></slot>
    </a>
  </mock:shadow-root>
  Link
</ld-link>
`;

exports[`ld-link renders with icon on end 1`] = `
<ld-link icon-end="">
  <mock:shadow-root>
    <a class="ld-link" icon-end="">
      <slot></slot>
      <ld-icon class="ld-link__icon" name="arrow-right"></ld-icon>
    </a>
  </mock:shadow-root>
  Link
</ld-link>
`;

exports[`ld-link renders with icon on start 1`] = `
<ld-link icon-start="">
  <mock:shadow-root>
    <a class="ld-link" icon-start="">
      <ld-icon class="ld-link__icon" name="arrow-right"></ld-icon>
      <slot></slot>
    </a>
  </mock:shadow-root>
  Link
</ld-link>
`;

exports[`ld-link renders with large size 1`] = `
<ld-link>
  <mock:shadow-root>
    <a class="ld-link ld-link--lg">
      <slot></slot>
    </a>
  </mock:shadow-root>
  Link
</ld-link>
`;

exports[`ld-link renders with small size 1`] = `
<ld-link>
  <mock:shadow-root>
    <a class="ld-link ld-link--sm">
      <slot></slot>
    </a>
  </mock:shadow-root>
  Link
</ld-link>
`;
